--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -21,15 +21,15 @@
 			<div class="carousel-item active" data-bs-interval="4000">
 				<img src="{% static 'img/pretty-girl.jpg' %}" class="d-block w-100" alt="pretty-girl">
 				<div class="carousel-caption">
-					<h5>Gana puntos con KatySop303</h5>
-					<p>Canjéalos luego por descuentos en tus futuras compras.</p>
+					<h5>Earn points with KatySop303</h5>
+					<p>Redeem them later for discounts on your future purchases.</p>
 					<a href="{% url 'home_app:points_rules' %}">Points Rules</a>
 				</div>
 			</div>
 			<div class="carousel-item" data-bs-interval="4000">
 				<img src="{% static 'img/products-publish.png' %}" class="d-block w-100" alt="products-publish">
 				<div class="carousel-caption d-md-block">
-					<h5 class="color">Mejora tu sistema inmune</h5>
+					<h5 class="color">Improve your immune system</h5>
 					<a href="{% url 'home_app:home' %}">Go shopping</a>
 				</div>
 			</div>
@@ -51,24 +51,24 @@
 	<div class="card">
 		<img src="{% static 'img/padlock.png' %}" class="card-img-top" alt="padlock">
 		<div class="card-body">
-			<h5 class="card-title">Compra segura en línea</h5>
-			<p class="card-text">Sus datos y transacciones están seguros con nosotros, todo nuestro sitio web está
-				encriptado con certificado de seguridad SSL.</p>
+			<h5 class="card-title">secure online shopping</h5>
+			<p class="card-text">Your data and transactions are safe with us, our entire website is
+				encrypted with SSL security certificate.</p>
 		</div>
 	</div>
 	<div class="card"">
 		<img src="{% static 'img/package-delivery.png' %}" class="card-img-top" alt="package-delivery">
 		<div class="card-body">
-			<h5 class="card-title">Envió gratis en todos los productos</h5>
-			<p class="card-text">En Katy Shop 303 sabemos que no te gustan los gastos de envíos, y por eso te lo
-				enviamos gratis.</p>
+			<h5 class="card-title">Free shipping on all products</h5>
+			<p class="card-text">At Katy Shop 303 we know that you don't like shipping costs, and that's why you
+				we ship free.</p>
 		</div>
 	</div>
 	<div class="card">
 		<img src="{% static 'img/alarm.png' %}" class="card-img-top" alt="alarm">
 		<div class="card-body">
-			<h5 class="card-title">Envíos entre 3/7 días</h5>
-			<p class="card-text">Haz tu pedido y recíbelo cómodamente en tu casa en menos de una semana.</p>
+			<h5 class="card-title">Shipments between 3/7 days</h5>
+			<p class="card-text">Place your order and receive it comfortably at home in less than a week.</p>
 		</div>
 	</div>
 </div>
