--- a/templates/home/privacy-policy.html
+++ b/templates/home/privacy-policy.html
@@ -11,130 +11,128 @@
 <!--Informacion de los Terminos y Condiciones de Uso*/-->
 
 <div class="terms">
-    <h2>POLÍTICA DE PRIVACIDAD</h2>
+    <h2>PRIVACY POLICY</h2>
 
     <p>
-        La presente Política de Privacidad establece los términos en que “Katy Shop 303” usa y protege la información
-        que es
-        proporcionada por sus usuarios al momento de utilizar su sitio web. Esta empresa está comprometida con la
-        seguridad
-        de los datos de sus usuarios. Cuando le solicitamos que complete los campos de información personal con los que
-        puede identificarse, lo hacemos asegurándonos de que solo se utilizará de acuerdo con los términos de este
-        documento. Sin embargo, esta Política de Privacidad puede cambiar con el tiempo o ser actualizada, por lo que le
-        recomendamos y enfatizamos revisar continuamente esta página para asegurarse que está de acuerdo con dichos
-        cambios.
+        This Privacy Policy establishes the terms in which "Katy Shop 303" uses and protects the information
+        what is provided by its users when using its website. This company is committed to security
+        of the data of its users. When we ask you to complete the personal information fields with which you
+        can be identified, we do so by ensuring that it will only be used in accordance with the terms of this
+        document. However, this Privacy Policy may change over time or be updated, so we
+        We recommend and emphasize that you continually review this page to ensure that you agree with such
+        changes.
     </p>
 
-    <h3>Información que se recopila</h3>
+    <h3>Information that is collected</h3>
     
     <p>
-        Nuestro sitio web puede recopilar información personal como: Nombre, información de contacto como su dirección
-        de correo electrónico e información demográfica. Asimismo, cuando sea necesario, se podrá requerir información
-        específica para procesar un pedido o realizar una entrega o facturación.
+        Our website may collect personal information such as: Name, contact information such as your address
+        email address and demographic information. Likewise, when necessary, information may be requested
+        specific to process an order or make a delivery or billing.
     </p>
 
-    <h3>Uso de la información recopilada</h3>
+    <h3>Use of information collected</h3>
     
     <p>
-        Nuestro sitio web utiliza la información para brindar el mejor servicio posible, particularmente para mantener
-        un registro de usuarios, de pedidos si corresponde, y para mejorar nuestros productos y servicios. Es posible que
-        se envíen correos electrónicos periódicamente a través de nuestro sitio con ofertas especiales, nuevos productos y
-        otra información publicitaria que consideremos relevante para usted o que pueda brindarle algún beneficio, estos
-        correos electrónicos serán enviados a la dirección que usted proporcione y podrán ser cancelados en cualquier momento.
+        Our website uses the information to provide the best possible service, particularly to maintain
+        a user registry, of orders if applicable, and to improve our products and services. It is possible that
+        emails are sent periodically through our site with special offers, new products and
+        other advertising information that we consider relevant to you or that may provide you with some benefit, these
+        Emails will be sent to the address you provide and may be canceled at any time.
     </p>
     
-    <h3>¿Qué son las galletas?</h3>
+    <h3>What are cookies?</h3>
     
     <p>
-        Una cookie es un fichero que se descarga en su ordenador al acceder a determinadas páginas web. Las cookies
-        permiten que una página web, entre otras cosas, almacene y recupere información sobre los hábitos de navegación de un
-        usuario o de su equipo y, según la información que contengan y la forma en que utilice su equipo, pueden utilizarse para
-        reconocer al usuario.
+        A cookie is a file that is downloaded to your computer when accessing certain web pages. The cookies
+        allow a web page, among other things, to store and retrieve information about the browsing habits of a
+        user or your computer, and depending on the information they contain and how you use your computer, they may be used to
+        recognize the user.
     </p>
 
-    <h3>¿Qué tipos de cookies utiliza este sitio web?</h3>
+    <h3>What types of cookies does this website use?</h3>
 
     <p>
-        Este sitio web utiliza los siguientes tipos de cookies:<br>
-        <strong>Cookies de análisis:</strong> Aquellas que bien tratadas por nosotros o por terceros, nos permiten cuantificar el número de
-        usuarios y así realizar la medición y análisis estadístico de la utilización que hacen los usuarios del servicio
-        ofertado. Para ello se analiza su navegación en nuestra página web con el fin de mejorar la oferta de productos o
-        servicios que le ofrecemos.<br><br>
+        This website uses the following types of cookies:<br>
+        <strong>Analysis cookies:</strong> Those that, well treated by us or by third parties, allow us to quantify the number of
+        users and thus carry out the measurement and statistical analysis of the use made by users of the service
+        offered. To do this, your browsing on our website is analyzed in order to improve the offer of products or
+        services we offer you.<br><br>
 
-        <strong>Cookies técnicas:</strong> Son aquellas que permiten al usuario navegar por el área restringida y utilizar sus diferentes
-        funciones como, por ejemplo, realizar el proceso de compra de un artículo.<br><br>
+        <strong>Technical cookies:</strong> They are those that allow the user to navigate through the restricted area and use its different
+        functions such as, for example, carrying out the process of purchasing an item.<br><br>
 
-        <strong>Cookies de personalización:</strong> Son aquellas que permiten al usuario acceder al servicio con algunas características de
-        carácter general predefinidas en función de una serie de criterios en el terminal del usuario, como por ejemplo
-        serían el idioma o el tipo de navegador a través del cual se conecta al servicio. Servicio.<br><br>
+        <strong>Personalization cookies:</strong> They are those that allow the user to access the service with some characteristics of
+        general character predefined based on a series of criteria in the user's terminal, such as
+        They would be the language or the type of browser through which you connect to the service. Service.<br><br>
     </p>
 
-    <h3>¿Qué son las galletas?</h3>
+    <h3>What are cookies?</h3>
 
     <p>
-        Una cookie es un fichero que se descarga en su ordenador al acceder a determinadas páginas web. Las cookies permiten
-        que una página web, entre otras cosas, almacene y recupere información sobre los hábitos de navegación de un usuario
-        o de su equipo y, según la información que contengan y la forma en que utilice su equipo, pueden utilizarse para
-        reconocer al usuario.
+        A cookie is a file that is downloaded to your computer when accessing certain web pages. Cookies allow
+        that a web page, among other things, stores and retrieves information about the browsing habits of a user
+        or your computer, and depending on the information they contain and how you use your computer, they may be used to
+        recognize the user.
     </p>
 
-    <h3>¿Qué tipos de cookies utiliza este sitio web?</h3>
+    <h3>What types of cookies does this website use?</h3>
 
     <p>
-        Este sitio web utiliza los siguientes tipos de cookies:
+        This website uses the following types of cookies:
 
-        Cookies de análisis: Aquellas que bien tratadas por nosotros o por terceros, nos permiten cuantificar el número de
-        usuarios y así realizar la medición y análisis estadístico de la utilización que hacen los usuarios del servicio
-        ofertado. Para ello se analiza su navegación en nuestra página web con el fin de mejorar la oferta de productos o
-        servicios que le ofrecemos.
+        Analysis cookies: Those that are well processed by us or by third parties, allow us to quantify the number of
+        users and thus carry out the measurement and statistical analysis of the use made by users of the service
+        offered. To do this, your browsing on our website is analyzed in order to improve the offer of products or
+        services we offer you.
 
-        Cookies técnicas: Son aquellas que permiten al usuario navegar por el área restringida y utilizar sus diferentes
-        funciones como, por ejemplo, realizar el proceso de compra de un artículo.
+        Technical cookies: These are those that allow the user to navigate through the restricted area and use its different
+        functions such as, for example, carrying out the process of purchasing an item.
 
-        Cookies de personalización: Son aquellas que permiten al usuario acceder al servicio con algunas características de
-        carácter general predefinidas en función de una serie de criterios en el terminal del usuario, como por ejemplo
-        serían el idioma o el tipo de navegador a través del cual se conecta al servicio. Servicio.
+        Personalization cookies: These are those that allow the user to access the service with some characteristics of
+        general character predefined based on a series of criteria in the user's terminal, such as
+        They would be the language or the type of browser through which you connect to the service.
     </p>
 
-    <h3>Deshabilitar cookies</h3>
+    <h3>Disable cookies</h3>
 
     <p>
-        Puedes permitir, bloquear o eliminar las cookies instaladas en tu equipo mediante la configuración de las opciones
-        del navegador instalado en tu ordenador.
+        You can allow, block or eliminate the cookies installed on your computer by configuring the options
+        of the browser installed on your computer.
 
-        En la mayoría de los navegadores web se ofrece la posibilidad de permitir, bloquear o eliminar las cookies
-        instaladas en su equipo.
+        Most web browsers offer the ability to allow, block or delete cookies.
+        installed on your computer.
     </p>
     
-    <h3>Cookies de terceros</h3>
+    <h3>Third party cookies</h3>
 
     <p>
-        Este sitio web utiliza servicios de terceros para recopilar información con fines estadísticos y de uso del sitio
-        web. Las cookies de DoubleClick se utilizan para mejorar la publicidad incluida en el sitio web. Se utilizan para
-        orientar la publicidad de acuerdo con el contenido que es relevante para un usuario, mejorando así la calidad de la
-        experiencia en el uso de la misma.
+        This website uses third-party services to collect information for statistical and site usage purposes.
+        Web. DoubleClick cookies are used to improve the advertising included on the website. Are used to
+        target advertising according to content that is relevant to a user, thus improving the quality of the
+        experience in using it.
 
-        Específicamente, utilizamos los servicios de Google AdSense y Google Analytics para nuestras estadísticas y
-        publicidad. Algunas cookies son esenciales para el funcionamiento del sitio, por ejemplo, el motor de búsqueda
-        integrado.
+        Specifically, we use the services of Google AdSense and Google Analytics for our statistics and
+        advertising. Some cookies are essential for the operation of the site, for example, the search engine
+        integrated.
 
-        Nuestro sitio incluye otras funciones proporcionadas por terceros. Puedes compartir fácilmente el contenido en redes
-        sociales como Facebook, Twitter o Google +, con los botones que hemos incluido para tal fin.
+        Our site includes other features provided by third parties. You can easily share the content on networks
+        social networks such as Facebook, Twitter or Google +, with the buttons that we have included for this purpose.
     </p>
 
-    <h3>Advertencia sobre la eliminación de cookies.</h3>
+    <h3>Warning about the deletion of cookies.</h3>
 
     <p>
-        Puede eliminar y bloquear todas las cookies en este sitio, pero parte del sitio no funcionará o la calidad del sitio
-        web puede verse afectada.<br>
+        You can delete and block all cookies on this site, but some of the site will not work or the quality of the site
+        website may be affected.<br>
 
-        Si tiene alguna duda acerca de nuestra política de cookies, puede contactar con este sitio web a través de nuestros
-        canales de Contacto.<br>
+        If you have any questions about our cookie policy, you can contact this website through our
+        Contact channels.<br>
 
-        Esta empresa no venderá, cederá ni distribuirá información personal que sea recabada sin su consentimiento, salvo
-        que sea requerido por un juez con orden judicial.<br>
+        This company will not sell, assign or distribute personal information that is collected without your consent, except
+        that is required by a judge with a court order.<br>
 
-        “Katy Shop 303” se reserva el derecho de cambiar los términos de esta Política de Privacidad en cualquier momento.<br>
+        “Katy Shop 303” reserves the right to change the terms of this Privacy Policy at any time.<br>
     </p>
 </div>
 
