--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,11 +1,11 @@
 {% load static %}
 
-<!--Pie de pagina-->
+<!--Footer-->
 
 <div class="box-footer">
     <footer class="footer">
-        <a class="footer__link" href="{% url 'home_app:privacy_policy' %}">Politica de privacidiad</a>
-        <a class="footer__link" href="{% url 'home_app:terms' %}">Terminos y Condiciones</a>
+        <a class="footer__link" href="{% url 'home_app:privacy_policy' %}">Privacy Policy</a>
+        <a class="footer__link" href="{% url 'home_app:terms' %}">Terms and Conditions</a>
         <div class="footer__container">
             <h5>2023 KatyShop303</h5>
             <h5>Created by Ronny Blandon</h5>
