--- a/templates/send_email/email-verification-user.html
+++ b/templates/send_email/email-verification-user.html
@@ -40,8 +40,8 @@
   <body>
     <div class="container">
       <img src="http://127.0.0.1:8000/static/img/logo.png" alt="Logo del sitio web" class="logo">
-      <h1>Bienvenido a KatyShop303</h1>
-      <p>Por favor, verifique su dirección de correo electrónico haciendo clic en el botón a continuación</p>
+      <h1>Welcome to KatyShop303</h1>
+      <p>Please verify your email address by clicking the button below.</p>
 	  <p>{{message_context}}</p>
       <a href="http://127.0.0.1:8000{{path_url}}" class="btn">{{btn_text}}</a>
     </div>
