--- a/templates/user/Thanks-for-register.html
+++ b/templates/user/Thanks-for-register.html
@@ -11,11 +11,11 @@
 <div class="container-thanks">
     <div class="box-thanks">
         <img src="{% static 'img/thank_you.png' %}" alt="thank you">
-        <p>Gracias por registrarte en KatyShop303.<br> Para iniciar sesión debe activar su cuenta 
-            con el enlace que le hemos enviado a su correo electrónico.<br>
-            Si no encuentra el correo en su bandeja principal verifique en su bandeja de spam.
+        <p>Thank you for registering on KatyShop303.<br> To log in you must activate your account
+            with the link that we have sent to your email.<br>
+            If you can't find the email in your main inbox, check your spam folder.
         </p>
-        <a href="{% url 'user_app:user_resend_email' %}"><strong>Reenviar correo</strong></a>
+        <a href="{% url 'user_app:user_resend_email' %}"><strong>Resend email</strong></a>
     </div>
 </div>
 
