--- a/templates/user/change-password.html
+++ b/templates/user/change-password.html
@@ -14,17 +14,17 @@
     <form class="form-register" method="post"> {% csrf_token %}
         {{ form.non_field_errors }}
         <div class="form__container">
-            <p>Ingrese su nueva contraseña.</p>
+            <p>Enter your new password.</p>
         </div>
         
         {{form.repeat_password.errors}}
-        <label class="form-register__label"><img src="{% static 'img/icono-contraseña.svg' %}" alt="icono-contraseña">
+        <label class="form-register__label"><img src="{% static 'img/icono-contraseña.svg' %}" alt="icon-password">
             {{form.new_password}}</label>
 
-        <label class="form-register__label"><img src="{% static 'img/icono-contraseña.svg' %}" alt="icono-contraseña">
+        <label class="form-register__label"><img src="{% static 'img/icono-contraseña.svg' %}" alt="icon-password">
             {{form.repeat_password}}</label>
 
-        <input class="form-register__input-submit" type="submit" value="Cambiar Contraseña">
+        <input class="form-register__input-submit" type="submit" value="Change Password">
     </form>
 </div class="container-form">
 
