--- a/templates/user/forgot-password.html
+++ b/templates/user/forgot-password.html
@@ -8,19 +8,19 @@
 {% block content %}
 {% include 'includes/header.html' %}
 
-<!--Formulario para recuperar cuenta-->
+<!--Form to recover account-->
     
 <div class="container-form">
     <form class="form-register" method="post"> {% csrf_token %}
         <div class="form__container">
-            <p>Ingrese su correo electrónico con el que registro su cuenta para recibir un enlace donde podrá cambiar la contraseña.</p>
+            <p>Enter your email with which you registered your account to receive a link where you can change your password.</p>
         </div>
         {{ form.non_field_errors }}
-        <label class="form-register__label"><img src="{% static 'img/icono-contraseña.svg' %}" alt="icon-password">
+        <label class="form-register__label"><img src="{% static 'img/icono-correo.svg' %}" alt="icon-email">
             {{form.email}}</label>
 
 
-        <input class="form-register__input-submit" type="submit" value="Recuperar Cuenta">
+        <input class="form-register__input-submit" type="submit" value="Recover account">
     </form>
 </div class="container-form">
 
