--- a/static/css/checkout.css
+++ b/static/css/checkout.css
@@ -7,6 +7,52 @@
 }
 
 /* own classes */
+
+/* Box apply discount  */
+.apply-points {
+    display: flex;
+    align-content: center;
+}
+
+/* Points Form */
+.box-form-points {
+    display: flex;
+    justify-content: center;
+}
+#form-points {
+    display: none;
+    padding: 0.5rem 0rem;
+    border: 0.1rem solid #000;
+    border-radius: 0.6rem;
+    animation: fadeIn 0.4s ease-in-out;
+}
+#form-points p {
+    margin-bottom: 0.7rem;
+}
+#form-points input {
+    width: 100%;
+    margin-bottom: 0.7rem;
+}
+.form-points-buttons {
+    display: flex;
+    justify-content: end;
+    column-gap: 0.7rem;
+}
+.btn-cancel-points {
+    padding: 0.375rem 0.75rem;
+    background-color: #fff;
+    border: 0.05rem solid #ccc;
+    border-radius: 0.4rem;
+}
+/* points informative message */
+.message-points {
+    display: inline-block;
+    padding: 0.1rem 0.2rem;
+    background-color: #f00;
+    color: #fff;
+    font-size: 0.85rem;
+}
+
 /* Section Address */
 .box-shipping {
     margin-bottom: 1.3rem;
@@ -34,13 +80,59 @@
 }
 .details-payment strong {
     width: 70%;
-    padding: 0.4rem 0.7rem;
+    padding: 0.5rem 0.7rem;
     background-color: #eee;
     font-weight: 600;
 }
 .details-payment span {
     color: #0b0;
 }
+.products {
+    border-bottom: 0.1rem solid #bbb;
+}
+.product-name {
+    width: 70%;
+    padding: 0.15rem 0.7rem;
+    background-color: #fff;
+    color: #00f;
+}
+.box-discount {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+#remove-discount {
+    color: #f00;
+    cursor: pointer;
+}
+#remove-discount:hover {
+    color: #00f;
+    text-decoration: underline;
+}
+#remove-discount:active {
+    color: #00c;
+}
+
+/* loading to checkout */
+.loader-discount {
+    display: none;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    background-color: #0009;
+    z-index: 10;
+}
+.loader-discount img {
+    display: block;
+    width: 33%;
+}
+
 /* Form Payment */
 .div-payment {
     margin: 0.7rem 0rem 1rem 0rem;
@@ -98,6 +190,23 @@
     text-decoration: underline;
 }
 
+/* Animations */
+@keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(1.25rem);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+}
+  
+
+@media screen and (min-width: 768px) {
+    /* Own classes */
+    /* Points Form */
+}
 
 @media screen and (min-width: 1024px) {
     /* Own classes */
