--- a/templates/base.html
+++ b/templates/base.html
@@ -28,9 +28,9 @@
             <img class="cookie" src="/static/img/img-cookie.svg" alt="cookie">
             <img class="arrow-hide" src="/static/img/arrow_hide.svg" alt="arrow-hide">
             <h3 class="Banner-title">Cookies</h3>
-            <p class="banner-message">Utilizamos cookies propias y de terceros para mejorar nuestros servicios.</p>
-            <button class="button-accept" id="btn-accept-cookies">De acuerdo</button>
-            <a class="privacy-policies" href="{% url 'home_app:privacy_policy' %}">Politica de Privacidad.</a>
+            <p class="banner-message">We use our own and third-party cookies to improve our services.</p>
+            <button class="button-accept" id="btn-accept-cookies">I agree</button>
+            <a class="privacy-policies" href="{% url 'home_app:privacy_policy' %}">Privacy Policy</a>
         </div>
     </div>
 
