--- a/templates/home/points-rules.html
+++ b/templates/home/points-rules.html
@@ -11,46 +11,53 @@
 <!--Informacion de los Terminos y Condiciones de Uso*/-->
 
 <div class="terms">
-    <h2>Reglas de Puntos</h2>
+    <h2>Points Rules</h2>
 
     <p>
-        KATY SHOP 303 cuenta con un programa de puntos que beneficia a los clientes por su fidelidad, por cada compra
-        realizada en la tienda se acumula en una determinada cantidad de puntos, puntos que pueden ser canjeados por
-        descuentos en futuras compras.
+        KATY SHOP 303 has a points program that benefits customers for their loyalty, for each purchase
+        made in the store accumulates in a certain amount of points, points that can be exchanged for
+        discounts on future purchases.
         <br><br>
-        Lo que se establece en este programa de puntos es solo para los Estados Unidos, una excepción para los estados
-        de las Islas Vírgenes y Alaska no está disponible. Es obligación del cliente conocer y cumplir las normas,
-        actualizar e informar periódicamente en la página katyshop303.com para conocer sus derechos y puntos acumulados.
+        What is established in this points program is only for the United States, with the exception of the 
+        states of the Virgin Islands and Alaska is not available. It is the client's obligation to know and 
+        comply with the rules, update and report periodically on the katyshop303.com page to know their 
+        rights and accumulated points.
         <br><br>
-        Los puntos se acreditarán en su cuenta una vez que el pedido haya sido pagado y enviado. Los puntos no tienen
-        fecha de vencimiento y no son transferibles de una cuenta a otra.
+        Points will be credited to your account once the order has been paid for and shipped. The points do not have
+        expiration date and are not transferable from one account to another.
         <br><br>
-        Puede usar sus puntos acumulados en compras, canjeando sus puntos en la página del carrito o en la página de
-        pago.
+        You can use your accumulated points on purchases, redeeming your points on the checkout page.
         <br><br>
-        Tasas de conversión y puntos canjeables.
+        <strong>Conversion rates and redeemable points</strong>
         <br><br>
-        El número de puntos que puedes acumular y canjear en descuentos:
+        The number of points you can accumulate and redeem in discounts:
         <br><br>
-        Tasa de conversión en acumulación de puntos en todos los productos al por mayor: $1 = 1 punto Ejemplo: Compras
-        $100 en productos y contienen 100 puntos.
+        Conversion rate into point accumulation on all wholesale products: $1 = {% if earning_points_rate > 1 %}{{ earning_points_rate }} points {% else %} {{ earning_points_rate }} point {% endif %} 
+        Example: Shopping ${{ example_value }} in products and you earn {{ points_to_win }} points.
         <br><br>
-        Tasa de conversión al redimir puntos en descuentos, esto aplica para todos los productos de la tienda. 35 puntos
-        = $1 Ejemplo, puedes canjear 35 puntos y tener un descuento de $1.
+        Conversion rate when redeeming points in discounts, this applies to all products in the store. {{ point_redemption_rate }} points
+        = $1 Example, you can redeem {{ point_redemption_rate }} points and have a discount of $1.
         <br><br>
-        El mínimo que puedes canjear por un descuento es de 35 puntos por pedido.
+        The minimum you can redeem for a discount is {{ point_redemption_rate }} points per order.
+        <br><br>
+        The maximum that you can redeem in points is determined by the minimum value of the order to pay, which
+        it's 5 dollars. This means that the maximum amount you can redeem in points will be equivalent to leaving
+        a minimum of 5 dollars to pay for the order. For example, if your total order is $100,
+        but you have points to redeem up to 120 dollars, you can redeem a maximum of 95 dollars in points,
+        since the minimum order value is 5 dollars.
         <br><br>
         
-        <h3>Reserva de ley</h3>
+        <h3>reserve of law</h3>
         
-        KATY SHOP 303 se reserva el derecho de modificar o cancelar, parcial o totalmente según sea necesario, las
-        Reglas, Términos y Condiciones, reglas, privilegios, beneficios u otras ofertas especiales del Programa de
-        Puntos, con previo aviso a los clientes con 3 semanas de anticipación. Esto significa que el programa de Puntos
-        puede realizar cambios que afectan, por ejemplo, las reglas para acreditar, redimir o cancelar Puntos, el valor
-        de los Puntos, etc.
+        KATY SHOP 303 reserves the right to modify or cancel, partially or totally as necessary, the Rules, 
+        Terms and Conditions, rules, privileges, benefits or other special offers of the Points Program, 
+        without prior notice when modified or eliminated the program. This means that the Points program may 
+        make changes that affect, for example, the rules for crediting, redeeming or canceling Points, 
+        the value of Points, etc.
         <br><br>
-        En caso de terminación del Programa, todos los Puntos acumulados por los clientes serán cancelados, sin que ello
-        genere responsabilidad alguna por el Saldo acumulado o los Puntos no canjeados.<br><br>
+        In case of termination of the Program, all the Points accumulated by the clients will be cancelled, 
+        without generating any responsibility for the accumulated Balance or the Points not redeemed.
+        <br><br>
     </p>
 </div>
 
