--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -14,27 +14,27 @@
 			<ul class="nav nav-pills me-auto mb-2 mb-lg-0">
 				<li class="nav-item m-1">
 					<a class="menu-page1 nav-link" id="start" aria-current="page"
-						href="{% url 'home_app:home' %}">Inicio</a>
+						href="{% url 'home_app:home' %}">Start</a>
 				</li>
 				<li class="nav-item m-1">
-					<a class="menu-page2 nav-link" id="store" href="{% url 'product_app:store' %}">Tienda</a>
+					<a class="menu-page2 nav-link" id="store" href="{% url 'product_app:store' %}">Shop</a>
 				</li>
 				<li class="nav-item m-1">
-					<a class="menu-page3 nav-link" id="contact" href="{% url 'home_app:contact' %}">Contacto</a>
+					<a class="menu-page3 nav-link" id="contact" href="{% url 'home_app:contact' %}">Contact</a>
 				</li>
 
 				{% if not user.is_anonymous %}
 				<li class="nav-item m-1">
-					<a class="nav-link" id="my-account" href="{% url 'user_app:user_orders' %}">Mi cuenta</a>
+					<a class="nav-link" id="my-account" href="{% url 'user_app:user_orders' %}">My account</a>
 				</li>
 				{% else %}
 				<li class="nav-item m-1">
-					<a class="nav-link" id="my-account" href="{% url 'user_app:user_login' %}">Mi cuenta</a>
+					<a class="nav-link" id="my-account" href="{% url 'user_app:user_login' %}">My account</a>
 				</li>
 				{% endif %}
 
 				<li class="nav-item m-1">
-					<a class="nav-link" id="points-rules" href="{% url 'home_app:points_rules' %}">Reglas de puntos</a>
+					<a class="nav-link" id="points-rules" href="{% url 'home_app:points_rules' %}">Points rules</a>
 				</li>
 				<li class="nav-item m-1">
 					<a class="cart nav-link position-relative" href="{% url 'cart_app:cart' %}">
@@ -50,8 +50,8 @@
 				</li>
 			</ul>
 			<form class="d-flex" method="get" action="{% url 'product_app:store' %}" role="search"> {% csrf_token %}
-				<input class="input-search form-control me-2" id="kword" name="kword" type="search" placeholder="Buscar producto" aria-label="Search">
-				<button class="btn-search btn btn-outline-success" type="submit">Buscar</button>
+				<input class="input-search form-control me-2" id="kword" name="kword" type="search" placeholder="Search product" aria-label="Search">
+				<button class="btn-search btn btn-outline-success" type="submit">search</button>
 			</form>
 		</div>
 	</div>
@@ -61,7 +61,7 @@
 <div class="container-mini-cart">
 	<div class="box-cart">
 		<div class="d-flex justify-content-center">
-			<h2>Carrito</h2>
+			<h2>Cart</h2>
 			<img class="mini-cart-close position-absolute" src="{% static 'img/x-close2.svg' %}" alt="close cart">
 		</div>
 		<ul>
@@ -97,15 +97,15 @@
 			<strong class="cart-preview-subtotal text-success">$ {{ cart_subtotal }}</strong>
 		</p>
 		<div class="btn-cart-or-checkout py-3 d-flex justify-content-around">
-			<a class="view-cart" href="{% url 'cart_app:cart' %}"><strong>VER CARRO</strong></a>
+			<a class="view-cart" href="{% url 'cart_app:cart' %}"><strong>VIEW CART</strong></a>
 			{% if request.user.is_authenticated %}
-			<a class="checkout-mini-cart" href="{% url 'order_app:checkout' %}"><strong>PAGAR</strong></a>
+			<a class="checkout-mini-cart" href="{% url 'order_app:checkout' %}"><strong>CHECKOUT</strong></a>
 			{% else %}
-			<a class="checkout-mini-cart" href="{% url 'user_app:user_login_checkout' %}"><strong>PAGAR</strong></a>
+			<a class="checkout-mini-cart" href="{% url 'user_app:user_login_checkout' %}"><strong>CHECKOUT</strong></a>
 			{% endif %}
 		</div>
 		{% else %}
-		<p class="p-3">No hay productos en el carrito.</p>
+		<p class="p-3">There are no products in the cart.</p>
 		{% endif %}
 	</div>
 </div>
